# epi_bevy

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
assets/: population_info.json  ring_adjacency.json
derive-new-default/: Cargo.toml
derive-new-default/src/: lib.rs
examples/: query_traits.rs  query_traits.rs_  scenario_time_tinkering.rs  system_that_changes_the_world.rs  universe.rs
rscripts/notebooks/: sir_model_plot.R
src/: active_surveillance.rs  between_herd_spread_exogenous_model.rs  between_herd_spread_model.rs  between_herd_spread_model_record.rs  cattle_farm_recorder.rs  cattle_population.rs  chain_tools.rs  deprecated_active_surveillance.rs  disease_ecs_diagnostic.rs  disease_parameters.rs  farm_id_to_entity_map.rs  lib.rs  main.rs  parameters.rs  population_model_record.rs  populations.rs  prelude.rs  regulator_active_surveillance.rs  regulator_passive_surveillance.rs  repopulation_by_scaling.rs  scenario_builder.rs  scenario_intervals.rs  scenario_time.rs  sir_spread_model.rs  tools.rs
src/regulator_active_surveillance/: tests.rs
src/repopulation_by_scaling/: tests.rs
src/scenario_time/: mod.rs  scenario_intervals.rs  scenario_timer.rs
