[package]
name = "epi_bevy"
version = "0.1.0"
authors = ["Mossa <cgmossa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy = { git = "https://github.com/bevyengine/bevy.git", features = ["bevy_wgpu", "bevy_winit", "dynamic", "render"], default-features = false }
# this only ended up not including `pbr`
# bevy_internal = { git = "https://github.com/bevyengine/bevy.git", features = ["bevy_render", "bevy_ui", "bevy_text", "bevy_sprite"] }

# numerical rust
approx = "0.4.0"

# enhance #rustlang 
derive_more = "0.99.13"
itertools = "0.10.0"
readonly = "0.2.0"

# serialisation
serde = { version = "1", features = ["derive"], optional = true }

[features]
serialize = ["serde", "bevy/serialize"]
# default = ["bevy_internal/bevy_text", "bevy_internal/bevy_ui"]
