[package]
name = "epi_bevy"
version = "0.1.0"
authors = ["Mossa <cgmossa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy.git", features = ["dynamic"], default-features = false }
# bevy = { path = "../bevy/", features = ["dynamic"], default-features = false }
# dynamic is behaving weird on windows
# bevy = { git = "https://github.com/bevyengine/bevy.git", features = ["dynamic"], default-features = false }
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false }

# numerical rust
approx = "0.4.0"

# enhance #rustlang 
derive_more = "0.99.13"
derive-new = "0.5.9"
itertools = "0.10.0"
readonly = "0.2.0"
maplit = "1.0.2"

# error-handling
anyhow = "1.0.40"
thiserror = "1.0.24"

# serialisation
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0.64", optional = true }

# states/outputs recorders
csv = "1.1.6"

# scenario time
chrono = "0.4.19"

# PRNG 
rand = "0.8.3"
rand_distr = "0.4.0"

[features]
default = ["serialize"]
serialize = ["serde", "serde_json", "bevy/serialize"]
